{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 59,
  "lineage": "5ab3349c-8de8-b477-dd5b-a4d344b273be",
  "resources": [
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:security-group/sg-01a606cfc0b904aac",
            "description": "Controls who can talk to the EKS Control Plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a606cfc0b904aac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with cluster",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ef772a1e0ec6b27a"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cluster-sg",
            "name_prefix": "",
            "owner_id": "038774803581",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2c905f1fae8df22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:security-group/sg-0ef772a1e0ec6b27a",
            "description": "Allow nodes to communicate with each other on all ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef772a1e0ec6b27a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allows node to node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "node-sg",
            "name_prefix": "",
            "owner_id": "038774803581",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2c905f1fae8df22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_from_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with cluster",
            "from_port": 443,
            "id": "sgrule-2989890331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01a606cfc0b904aac",
            "security_group_rule_id": "sgr-051d0188a30cbda05",
            "self": false,
            "source_security_group_id": "sg-0ef772a1e0ec6b27a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.security-group.aws_security_group.eks-cluster",
            "module.security-group.aws_security_group.nodes",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ingress_from_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster to communicate with nodes",
            "from_port": 1025,
            "id": "sgrule-2709133893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ef772a1e0ec6b27a",
            "security_group_rule_id": "sgr-077bea2e4f4bbe0dd",
            "self": false,
            "source_security_group_id": "sg-01a606cfc0b904aac",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.security-group.aws_security_group.eks-cluster",
            "module.security-group.aws_security_group.nodes",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dacc477c8b21c613",
            "arn": "arn:aws:ec2:eu-west-2:038774803581:elastic-ip/eipalloc-0dacc477c8b21c613",
            "association_id": "eipassoc-0c30ab9bbc364f227",
            "domain": "vpc",
            "id": "eipalloc-0dacc477c8b21c613",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0b700ad714d3efd9b",
            "private_dns": "ip-10-0-2-53.eu-west-2.compute.internal",
            "private_ip": "10.0.2.53",
            "public_dns": "ec2-13-41-25-5.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.25.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:internet-gateway/igw-0de2906f251496c7d",
            "id": "igw-0de2906f251496c7d",
            "owner_id": "038774803581",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0c2c905f1fae8df22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dacc477c8b21c613",
            "association_id": "eipassoc-0c30ab9bbc364f227",
            "connectivity_type": "public",
            "id": "nat-02112f301e32b58cb",
            "network_interface_id": "eni-0b700ad714d3efd9b",
            "private_ip": "10.0.2.53",
            "public_ip": "13.41.25.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-015b0bc6efd00d9ef",
            "tags": {
              "Name": "igw-nat"
            },
            "tags_all": {
              "Name": "igw-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:route-table/rtb-0f3f55b95e7ba8bec",
            "id": "rtb-0f3f55b95e7ba8bec",
            "owner_id": "038774803581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02112f301e32b58cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2c905f1fae8df22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:route-table/rtb-0fd613a2cc60f6fb1",
            "id": "rtb-0fd613a2cc60f6fb1",
            "owner_id": "038774803581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de2906f251496c7d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2c905f1fae8df22"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-association-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a1325e84866e0b2",
            "route_table_id": "rtb-0f3f55b95e7ba8bec",
            "subnet_id": "subnet-0d9675d31d97de8f0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-2a",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-association-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c802935573be4db",
            "route_table_id": "rtb-0f3f55b95e7ba8bec",
            "subnet_id": "subnet-03269bbd28a01dece"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-2b",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-route-association-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e838daab58968a1b",
            "route_table_id": "rtb-0fd613a2cc60f6fb1",
            "subnet_id": "subnet-05ae5fa03903c1d67"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet-2a",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-route-association-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b31afd616bd5521",
            "route_table_id": "rtb-0fd613a2cc60f6fb1",
            "subnet_id": "subnet-015b0bc6efd00d9ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet-2b",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:subnet/subnet-0d9675d31d97de8f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9675d31d97de8f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038774803581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-subnet-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c2c905f1fae8df22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:subnet/subnet-03269bbd28a01dece",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03269bbd28a01dece",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "038774803581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private-subnet-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c2c905f1fae8df22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:subnet/subnet-05ae5fa03903c1d67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ae5fa03903c1d67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038774803581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-subnet-2a",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c2c905f1fae8df22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:subnet/subnet-015b0bc6efd00d9ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015b0bc6efd00d9ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038774803581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public-subnet-2b",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c2c905f1fae8df22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:038774803581:vpc/vpc-0c2c905f1fae8df22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e17c5e5fbec0dc3",
            "default_route_table_id": "rtb-04170b199c5073d0f",
            "default_security_group_id": "sg-07f97a7d3ec6c33cf",
            "dhcp_options_id": "dopt-06da1b4ac7019d8bf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2c905f1fae8df22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04170b199c5073d0f",
            "owner_id": "038774803581",
            "tags": {
              "Name": "Main-VPC"
            },
            "tags_all": {
              "Name": "Main-VPC"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.nodes",
            "module.iam.aws_iam_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role.cluster",
            "module.iam.aws_iam_role.nodes",
            "module.iam.aws_iam_role.vpc_flow_logs_role",
            "module.iam.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "module.iam.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.node_group_elb_policy",
            "module.iam.aws_iam_role_policy_attachment.vpc_flow_logs_attach"
          ]
        }
      ]
    }
  ]
}